2012-02-13  ChangSeok Oh  <shivamidow@gmail.com>

        [GTK] Mutation Observers build is broken
        https://bugs.webkit.org/show_bug.cgi?id=78433

        Reviewed by Martin Robinson.

        Added some files missed.

        No new tests since no new feature.

        * GNUmakefile.list.am:

2012-02-13  Hayato Ito  <hayato@chromium.org>

        Make ShadowRoot.nodeType return DOCUMENT_FRAGMENT_NODE.
        https://bugs.webkit.org/show_bug.cgi?id=77514

        Reviewed by Dimitri Glazkov.

        NodeType.SHADOW_ROOT_NODE type is finally gone.

        * bindings/js/JSNodeCustom.cpp:
        (WebCore::createWrapperInline):
        * bindings/objc/DOM.mm:
        (kitClass):
        * bindings/v8/custom/V8NodeCustom.cpp:
        (WebCore::toV8Slow):
        * dom/ContainerNode.cpp:
        (WebCore::collectTargetNodes):
        (WebCore::ContainerNode::replaceChild):
        * dom/Document.cpp:
        (WebCore::Document::importNode):
        (WebCore::Document::childTypeAllowed):
        (WebCore::Document::canReplaceChild):
        * dom/Node.cpp:
        (WebCore::Node::dumpStatistics):
        (WebCore::Node::isDefaultNamespace):
        (WebCore::Node::lookupPrefix):
        (WebCore::Node::lookupNamespaceURI):
        (WebCore::appendTextContent):
        (WebCore::Node::setTextContent):
        * dom/Node.h:
        * dom/Range.cpp:
        (WebCore::lengthOfContentsInNode):
        (WebCore::Range::processContentsBetweenOffsets):
        (WebCore::Range::insertNode):
        (WebCore::Range::checkNodeWOffset):
        (WebCore::Range::checkNodeBA):
        (WebCore::Range::selectNode):
        (WebCore::Range::selectNodeContents):
        (WebCore::Range::surroundContents):
        * dom/ShadowRoot.cpp:
        * dom/ShadowRoot.h:
        (ShadowRoot):
        (WebCore::toShadowRoot):
        * editing/FrameSelection.cpp:
        (WebCore::nodeIsDetachedFromDocument):
        (WebCore):
        (WebCore::FrameSelection::textWillBeReplaced):