@@ -1995,15 +1995,18 @@ const AtomicString& Element::webkitRegionOverflow() const
     if (renderer() && renderer()->isRenderRegion()) {
         RenderRegion* region = toRenderRegion(renderer());
         switch (region->regionState()) {
-        case RenderRegion::RegionFit:
+        case RenderRegion::RegionFit: {
             DEFINE_STATIC_LOCAL(AtomicString, fitState, ("fit"));
             return fitState;
-        case RenderRegion::RegionEmpty:
+        }
+        case RenderRegion::RegionEmpty: {
             DEFINE_STATIC_LOCAL(AtomicString, emptyState, ("empty"));
             return emptyState;
-        case RenderRegion::RegionOverflow:
+        }
+        case RenderRegion::RegionOverflow: {
             DEFINE_STATIC_LOCAL(AtomicString, overflowState, ("overflow"));
             return overflowState;
+        }
         default:
             break;
         }
